--- a/ban4ipd.conf
+++ b/ban4ipd.conf
@@ -42,6 +42,8 @@ ip6tables = "/sbin/ip6tables"
 ; Hostname lookup (0: none, 1: lookup)
 hostname_lookup = 1
 
+; Cleanup old count info (0=No Clean, or Older than nnnn[s])
+maxfindtime = 604800
 
 
 [Overwrite_Section]
