--- a/ban4ipd.conf
+++ b/ban4ipd.conf
@@ -65,3 +65,14 @@ mail_title = "[Ban4ip]"
 ; Mail Priority:
 mail_priority = "X-Priority: 1"
 
+; Execute command befor BAN
+;exec_befor_ban = ""
+
+; Execute command after BAN
+;exec_after_ban = ""
+
+; Execute command befor UNBAN
+;exec_befor_unban = ""
+
+; Execute command after UNBAN
+;exec_after_unban = ""
