--- a/ban4ipd.conf
+++ b/ban4ipd.conf
@@ -1,7 +1,7 @@
 ; ======================================================================
 ; BAN for IP address (IPv4/IPv6)
 ; ======================================================================
-; 
+;
 ; '#' is no use
 ;
 
@@ -65,14 +65,14 @@ mail_title = "[Ban4ip]"
 ; Mail Priority:
 mail_priority = "X-Priority: 1"
 
-; Execute command befor BAN
+; Execute command befor BAN (<exec_befor_ban> --source <target_address> --proto <target_protcol> --dport <target_port> --jump <target_rule>)
 ;exec_befor_ban = ""
 
-; Execute command after BAN
+; Execute command after BAN (<exec_after_ban> --source <target_address> --proto <target_protcol> --dport <target_port> --jump <target_rule>)
 ;exec_after_ban = ""
 
-; Execute command befor UNBAN
+; Execute command befor UNBAN (<exec_befor_unban> --source <target_address> --proto <target_protcol> --dport <target_port> --jump <target_rule>)
 ;exec_befor_unban = ""
 
-; Execute command after UNBAN
+; Execute command after UNBAN (<exec_after_unban> --source <target_address> --proto <target_protcol> --dport <target_port> --jump <target_rule>)
 ;exec_after_unban = ""
