--- a/ban4ip/postfix-sasl.conf
+++ b/ban4ip/postfix-sasl.conf
@@ -15,7 +15,9 @@ target_protcol = 'all'
 target_port = all
 target_rule = 'DROP'
 
-target_str[] = '/postfix\/smtpd\[.*\]: warning: .*\[(.*)\]: SASL LOGIN authentication failed: authentication failure/'
+target_str[] = '/postfix\/smtpd\[.*\]: warning: .*\[(.*)\]: SASL LOGIN authentication failed: /'
+;target_str[] = '/postfix\/smtpd\[.*\]: warning: .*\[(.*)\]: SASL LOGIN authentication failed: authentication failure/'
+;target_str[] = '/postfix\/smtpd\[.*\]: warning: .*\[(.*)\]: SASL LOGIN authentication failed: generic failure/'
 
 
 [Overwrite_Section]
