--- a/ban4ipd.conf
+++ b/ban4ipd.conf
@@ -76,3 +76,9 @@ mail_priority = "X-Priority: 1"
 
 ; Execute command after UNBAN (<exec_after_unban> --source <target_address> --proto <target_protcol> --dport <target_port> --jump <target_rule>)
 ;exec_after_unban = ""
+
+; Network Mask BAN, if you want. (for IPv4)
+;ipv4_netmask = 28
+
+; Network Mask BAN, if you want. (for IPv6)
+;ipv6_netmask = 64
