--- a/ban4ip/postfix.conf
+++ b/ban4ip/postfix.conf
@@ -19,8 +19,8 @@ target_str[] = '/postfix\/smtpd\[.*\]: .* reject: RCPT from .*\[(.*)\]: 450 /'
 target_str[] = '/postfix\/smtpd\[.*\]: .* reject: RCPT from .*\[(.*)\]: 554 /'
 target_str[] = '/postfix\/smtpd\[.*\]: .* reject: VRFY from .*\[(.*)\]: 550 /'
 
-[Overwrite_Section]
-findtime = 600
-maxretry = 10
-bantime = 3600
 
+[Overwrite_Section]
+;findtime = 300
+;maxretry = 3
+;bantime = 3600
