--- a/ban4ip/postfix-sasl.conf
+++ b/ban4ip/postfix-sasl.conf
@@ -21,7 +21,6 @@ target_str[] = '/postfix\/smtpd\[.*\]: warning: .*\[(.*)\]: SASL LOGIN authentic
 
 
 [Overwrite_Section]
-findtime = 600
-maxretry = 10
-bantime = 3600
-
+;findtime = 300
+;maxretry = 3
+;bantime = 3600
