--- a/ban4ipd.conf
+++ b/ban4ipd.conf
@@ -82,3 +82,10 @@ mail_priority = "X-Priority: 1"
 
 ; Network Mask BAN, if you want. (for IPv6)
 ;ipv6_netmask = 64
+
+; White IP address list (Not BAN, IPv4/IPv6 address and Network Mixed OK!)
+;safe_address[] = "192.168.0.1"
+;safe_address[] = "192.168.11.0/24"
+;safe_address[] = "fe80::1"
+;safe_address[] = "fe80::/64"
+
