--- a/ban4ip/xmlrpc.conf
+++ b/ban4ip/xmlrpc.conf
@@ -11,7 +11,7 @@
 [dovecot_section]
 target_service = 'xmlrpc-access'
 target_log = '/var/log/httpd/access_log'
-target_protcol = 'udp'
+target_protcol = 'tcp'
 target_port = 80
 target_rule = 'DROP'
 
