PDOモジュール入れてるけどSQLite3クラスを使ってたのでPDOクラスを利用するように変更する それにともなって設定ファイルにpdoのdns設定できるようにする(これによりDBをMySQLなどにすることも可能・・・ですが、セッション２つ貼る意味を理解してないのでオリジナル通り２つのまま) ついでにテーブルにインデックスを貼る

--- a/ban4ipd.conf
+++ b/ban4ipd.conf
@@ -14,6 +14,8 @@ log_file = "/var/log/ban4ipd.log"
 
 ; DB file in db_dir/
 db_dir = "/var/lib/ban4ip"
+db_count_pdo_dsn = "sqlite:/var/lib/ban4ip/count.db"
+db_ban_pdo_dsn = "sqlite:/var/lib/ban4ip/ban.db"
 
 ; DB timeout[ms]
 db_timeout = 5000
