--- a/ban4ipd.conf
+++ b/ban4ipd.conf
@@ -15,6 +15,10 @@ log_file = "/var/log/ban4ipd.log"
 ; DB file in db_dir/
 db_dir = "/var/lib/ban4ip"
 
+;;; If you want to use other DB, you can change this parameter. :-)
+;;;pdo_dsn_count = "sqlite:/var/lib/ban4ip/count.db"
+;;;pdo_dsn_ban = "sqlite:/var/lib/ban4ip/ban.db"
+
 ; DB timeout[ms]
 db_timeout = 5000
 
