--- a/ban4ipd.conf
+++ b/ban4ipd.conf
@@ -18,6 +18,7 @@ db_dir = "/var/lib/ban4ip"
 ;;; If you want to use other DB, you can change this parameter. :-)
 ;;;pdo_dsn_count = "sqlite:/var/lib/ban4ip/count.db"
 ;;;pdo_dsn_ban = "sqlite:/var/lib/ban4ip/ban.db"
+;;;pdo_dsn_mailrate = "sqlite:/var/lib/ban4ip/mailrate.db"
 
 ; DB timeout[ms]
 db_timeout = 5000
@@ -69,6 +70,9 @@ mail_title = "[Ban4ip]"
 ; Mail Priority:
 mail_priority = "X-Priority: 1"
 
+; Mail send rate [mail per second. cf ... "300" is 1mail per 300sec]
+mailratetime = 300
+
 ; Execute command befor BAN (<exec_befor_ban> --source <target_address> --proto <target_protcol> --dport <target_port> --jump <target_rule>)
 ;exec_befor_ban = ""
 
@@ -92,4 +96,3 @@ mail_priority = "X-Priority: 1"
 ;safe_address[] = "192.168.11.0/24"
 ;safe_address[] = "fe80::1"
 ;safe_address[] = "fe80::/64"
-
