--- a/ban4ipd.conf
+++ b/ban4ipd.conf
@@ -96,3 +96,8 @@ mailratetime = 300
 ;safe_address[] = "192.168.11.0/24"
 ;safe_address[] = "fe80::1"
 ;safe_address[] = "fe80::/64"
+
+; Target String type "IP" or "KEYWORD". (If it is not set, target_type is "IP".)
+target_type = "IP"
+
+
