damage_recover add

--- a/ban4ipd.conf
+++ b/ban4ipd.conf
@@ -73,10 +73,14 @@ mail_priority = "X-Priority: 1"
 ; Mail send rate [mail per second. cf ... "300" is 1mail per 300sec]
 mailratetime = 300
 
-; Execute command befor BAN (<exec_befor_ban> --source <target_address> --proto <target_protcol> --dport <target_port> --jump <target_rule>)
+; Execute command befor BAN
+;    if "target_type" is "KEYWORD", <exec_after_ban> --keyword <target_keyword> --jump <target_rule> --service <target_service>
+;                   else (or "IP"), <exec_befor_ban> --source <target_address> --proto <target_protcol> --dport <target_port> --jump <target_rule> --service <target_service>
 ;exec_befor_ban = ""
 
-; Execute command after BAN (<exec_after_ban> --source <target_address> --proto <target_protcol> --dport <target_port> --jump <target_rule>)
+; Execute command after BAN
+;    if "target_type" is "KEYWORD", <exec_after_ban> --keyword <target_keyword> --jump <target_rule> --service <target_service>
+;                   else (or "IP"), <exec_befor_ban> --source <target_address> --proto <target_protcol> --dport <target_port> --jump <target_rule> --service <target_service>
 ;exec_after_ban = ""
 
 ; Execute command befor UNBAN (<exec_befor_unban> --source <target_address> --proto <target_protcol> --dport <target_port> --jump <target_rule>)
@@ -100,4 +104,5 @@ mailratetime = 300
 ; Target String type "IP" or "KEYWORD". (If it is not set, target_type is "IP".)
 target_type = "IP"
 
-
+; If database file damaged... (0: none, 1:delete & reboot=new db file)
+damage_recover = 1
