--- a/ban4ipd.conf
+++ b/ban4ipd.conf
@@ -100,4 +100,6 @@ mailratetime = 300
 ; Target String type "IP" or "KEYWORD". (If it is not set, target_type is "IP".)
 target_type = "IP"
 
+; If database file damaged... (0: none, 1:delete & reboot=new db file)
+damage_recover = 1
 
