--- a/ban4ip/auth.conf
+++ b/ban4ip/auth.conf
@@ -8,11 +8,11 @@
 ;
 ; If You want BAN multiport, copy this file. and edit "target_port". (must be numeric!)
 ;
-[sshd_section]
+[auth_section]
 target_service = 'auth-error'
 target_log = '/var/log/auth.log'
-target_protcol = 'tcp'
-target_port = ALL
+target_protcol = 'all'
+target_port = all
 target_rule = 'DROP'
 
 target_str[] = '/sshd\[.*\]: Failed .* for .* from (.*) port /'
