--- a/ban4ip/postfix-sasl.conf
+++ b/ban4ip/postfix-sasl.conf
@@ -16,6 +16,7 @@ target_port = all
 target_rule = 'DROP'
 
 target_str[] = '/postfix\/smtpd\[.*\]: warning: .*\[(.*)\]: SASL LOGIN authentication failed: /'
+target_str[] = '/postfix\/smtpd\[.*\]: warning: .*\[(.*)\]: SASL PLAIN authentication failed: /'
 ;target_str[] = '/postfix\/smtpd\[.*\]: warning: .*\[(.*)\]: SASL LOGIN authentication failed: authentication failure/'
 ;target_str[] = '/postfix\/smtpd\[.*\]: warning: .*\[(.*)\]: SASL LOGIN authentication failed: generic failure/'
 
