--- a/ban4ip/apache.conf
+++ b/ban4ip/apache.conf
@@ -15,17 +15,21 @@ target_protcol = 'tcp'
 target_port = 80
 target_rule = 'DROP'
 
+; for OLD Apache log format
 target_str[] = '/error\] \[client (.*)\] .* authentication failure/'
 target_str[] = '/error\] \[client (.*)\] client /'
-;target_str[] = '/error\] \[client (.*)\] client denied/'
-;target_str[] = '/error\] \[client (.*)\] client sent/'
-;target_str[] = '/error\] \[client (.*)\] client used/'
 target_str[] = '/error\] \[client (.*)\] File does not exist/'
 target_str[] = '/error\] \[client (.*)\] invalid /i'
-;target_str[] = '/error\] \[client (.*)\] invalid method/'
-;target_str[] = '/error\] \[client (.*)\] Invalid URI/'
 target_str[] = '/error\] \[client (.*)\] request failed/'
 target_str[] = '/error\] \[client (.*)\] suexec policy/'
+
+; for NEW? Apache log format
+target_str[] = '/\[client (.*):.*\] .*: authentication failure/'
+target_str[] = '/\[client (.*):.*\] .*: client /'
+target_str[] = '/\[client (.*):.*\] .*: File does not exist/'
+target_str[] = '/\[client (.*):.*\] .*: invalid /i'
+target_str[] = '/\[client (.*):.*\] .*: request failed/'
+target_str[] = '/\[client (.*):.*\] .*: suexec policy/'
 
 [Overwrite_Section]
 ;findtime = 600
