--- a/ban4ip/apache.conf
+++ b/ban4ip/apache.conf
@@ -24,12 +24,12 @@ target_str[] = '/error\] \[client (.*)\] request failed/'
 target_str[] = '/error\] \[client (.*)\] suexec policy/'
 
 ; for NEW? Apache log format
-target_str[] = '/\[client (.*):.*\] .*: authentication failure/'
-target_str[] = '/\[client (.*):.*\] .*: client /'
-target_str[] = '/\[client (.*):.*\] .*: File does not exist/'
-target_str[] = '/\[client (.*):.*\] .*: invalid /i'
-target_str[] = '/\[client (.*):.*\] .*: request failed/'
-target_str[] = '/\[client (.*):.*\] .*: suexec policy/'
+target_str[] = '/\[client (.*):\d+\] .*: authentication failure/'
+target_str[] = '/\[client (.*):\d+\] .*: client /'
+target_str[] = '/\[client (.*):\d+\] .*: File does not exist/'
+target_str[] = '/\[client (.*):\d+\] .*: invalid /i'
+target_str[] = '/\[client (.*):\d+\] .*: request failed/'
+target_str[] = '/\[client (.*):\d+\] .*: suexec policy/'
 
 [Overwrite_Section]
 ;findtime = 600
