--- a/ban4ip/apache.conf
+++ b/ban4ip/apache.conf
@@ -24,6 +24,7 @@ target_str[] = '/error\] \[client (.*)\] request failed/'
 target_str[] = '/error\] \[client (.*)\] suexec policy/'
 
 ; for NEW? Apache log format
+;target_str[] = '/\[client (.*):\d+\] AH\d+:/'
 target_str[] = '/\[client (.*):\d+\] .*: authentication failure/'
 target_str[] = '/\[client (.*):\d+\] .*: client /'
 target_str[] = '/\[client (.*):\d+\] .*: File does not exist/'
