--- a/ban4ip/dovecot_imap.conf
+++ b/ban4ip/dovecot_imap.conf
@@ -15,10 +15,14 @@ target_protcol = 'tcp'
 target_port = 143
 target_rule = 'DROP'
 
-target_str[] = '/dovecot: imap-login: .* \(auth failed, .*, rip=(.*), lip=/'
-target_str[] = '/dovecot: imap-login: .* authentication failure; .* rhost=(.*) /'
-target_str[] = '/dovecot: imap-login: .* pam\(.*, (.*)\): pam_authenticate\(\) failed: /'
-
+; Old Version
+;target_str[] = '/dovecot: imap-login: .* \(auth failed, .*, rip=(.*), lip=/'
+;target_str[] = '/dovecot: imap-login: .* authentication failure; .* rhost=(.*) /'
+;target_str[] = '/dovecot: imap-login: .* pam\(.*, (.*)\): pam_authenticate\(\) failed: /'
+; New Version
+target_str[] = '/: imap-login: .* \(auth failed, .*, rip=(.*), lip=/'
+target_str[] = '/: imap-login: .* authentication failure; .* rhost=(.*) /'
+target_str[] = '/: imap-login: .* pam\(.*, (.*)\): pam_authenticate\(\) failed: /'
 
 [Overwrite_Section]
 ;findtime = 300
