--- a/ban4ip/dovecot_imap.conf
+++ b/ban4ip/dovecot_imap.conf
@@ -23,6 +23,7 @@ target_rule = 'DROP'
 target_str[] = '/: imap-login: .* \(auth failed, .*, rip=(.*), lip=/'
 target_str[] = '/: imap-login: .* authentication failure; .* rhost=(.*) /'
 target_str[] = '/: imap-login: .* pam\(.*, (.*)\): pam_authenticate\(\) failed: /'
+target_str[] = '/: imap-login: .* \(no auth attempts .*, rip=(.*), lip=/'
 
 [Overwrite_Section]
 ;findtime = 300
