--- a/ban4ipd.conf
+++ b/ban4ipd.conf
@@ -92,6 +92,7 @@ mailratetime = 300
 ;ipv6_netmask = 64
 
 ; White IP address list (Not BAN, IPv4/IPv6 address and Network Mixed OK!)
+;safe_address[] = "127.0.0.1"
 ;safe_address[] = "192.168.0.1"
 ;safe_address[] = "192.168.11.0/24"
 ;safe_address[] = "fe80::1"
