--- a/ban4ip/bind.conf
+++ b/ban4ip/bind.conf
@@ -8,14 +8,17 @@
 ;
 ; If You want BAN multiport, copy this file. and edit "target_port". (must be numeric!)
 ;
-[dovecot_section]
+[bind_section]
 target_service = 'bind-error'
 target_log = '/var/log/messages'
-target_protcol = 'udp'
-target_port = 53
+;target_protcol = 'udp'
+;target_port = 53
+target_protcol = 'all'
+target_port = all
 target_rule = 'DROP'
 
-target_str[] = '/named\[.*\]: client (.*)#.* denied/'
+;target_str[] = '/named\[.*\]: client (.*)#.* denied/'
+target_str[] = '/named\[.*\]: client \@.* (.*)\#.* denied/'
 
 [Overwrite_Section]
 ;findtime = 600
