--- a/ban4ipd.conf
+++ b/ban4ipd.conf
@@ -1,5 +1,5 @@
 ; ======================================================================
-; BAN for IP address (IPv4/IPv6)
+; BAN for ipables/ip6tables
 ; ======================================================================
 ;
 ; '#' is no use
@@ -12,13 +12,51 @@ conf_dir = "/etc/ban4ip"
 ; Log file name.
 log_file = "/var/log/ban4ipd.log"
 
-; DB file in db_dir/
+; DB file in db_dir/ (for SQLite3)
 db_dir = "/var/lib/ban4ip"
 
-;;; If you want to use other DB, you can change this parameter. :-)
-;;;pdo_dsn_count = "sqlite:/var/lib/ban4ip/count.db"
-;;;pdo_dsn_ban = "sqlite:/var/lib/ban4ip/ban.db"
-;;;pdo_dsn_mailrate = "sqlite:/var/lib/ban4ip/mailrate.db"
+; If you want to use other DB, you can change this parameter. :-)
+;0) Default:SQLite3
+;pdo_dsn_count = "sqlite:/var/lib/ban4ip/count.db"
+;pdo_dsn_ban = "sqlite:/var/lib/ban4ip/ban.db"
+;pdo_dsn_mailrate = "sqlite:/var/lib/ban4ip/mailrate.db"
+;
+;1) PostgreSQL
+;pdo_dsn_count = "pgsql:host=localhost;port=5432;dbname=count_db;user=ban4ip;password=PASSWORD"
+;pdo_dsn_ban = "pgsql:host=localhost;port=5432;dbname=ban_db;user=ban4ip;password=PASSWORD"
+;pdo_dsn_mailrate = "pgsql:host=localhost;port=5432;dbname=mailrate_db;user=ban4ip;password=PASSWORD"
+;
+;2) MySQL
+;pdo_dsn_count = "mysql:host=localhost;port=3306;dbname=count_db"
+;pdo_dsn_ban = "mysql:host=localhost;port=3306;dbname=ban_db"
+;pdo_dsn_mailrate = "mysql:host=localhost;port=3306;dbname=mailrate_db"
+;pdo_dsn_username = "ban4ip"
+;pdo_dsn_password = "PASSWORD"
+;
+; Recommended settings...
+; "pdo_dsn_count" is shared amoung your local servers, with PostgreSQL or MySQL.
+
+; Information Share Mode (0=OFF, 1=ON)
+;iss_flag = 1
+;
+; Recommended settings...
+; If you set "iss_flag = 1", then you have to setup "iss_*" and enabled.
+
+; Get BAN Data from "iss_get_time" seconds ago.
+;iss_get_time = 86400
+
+; Get BAN Data up to "iss_get_limit" items.
+;iss_get_limit = 10000
+
+; Get BAN Data including my report. (0=NO, 1=YES : If you use the same ID on multiple servers, recommend "1")
+;iss_get_myreport = 0
+
+; Information Share Server (Your local ISS Server, or Public ISS Server https://ban4ip.net/. Public ISS Server is only "pgsql" with SSL(TLS).)
+;iss_server = "asia.ban4ip.net"
+;iss_server = "usa.ban4ip.net"
+;iss_server = "eu.ban4ip.net"
+;iss_username = "Your ISS UserID"
+;iss_password = "Your ISS Password"
 
 ; DB timeout[ms]
 db_timeout = 5000
@@ -92,7 +130,6 @@ mailratetime = 300
 ;ipv6_netmask = 64
 
 ; White IP address list (Not BAN, IPv4/IPv6 address and Network Mixed OK!)
-;safe_address[] = "127.0.0.1"
 ;safe_address[] = "192.168.0.1"
 ;safe_address[] = "192.168.11.0/24"
 ;safe_address[] = "fe80::1"
