--- a/ban4ip/wordpress.conf
+++ b/ban4ip/wordpress.conf
@@ -17,6 +17,7 @@ target_rule = 'DROP'
 
 ; for WordPress
 target_str[] = '/grep 'error\] \[client .*\] .*wp-login.php/'
+target_str[] = '/(.*) \- \- \[.*\] \"POST \/xmlrpc.php /'
 
 [Overwrite_Section]
 ;findtime = 600
