--- a/ban4ip/xmlrpc.conf
+++ b/ban4ip/xmlrpc.conf
@@ -11,8 +11,8 @@
 [dovecot_section]
 target_service = 'xmlrpc-access'
 target_log = '/var/log/httpd/access_log'
-target_protcol = 'tcp'
-target_port = 80
+target_protcol = 'all'
+target_port = all
 target_rule = 'DROP'
 
 target_str[] = '/(.*) \- \- \[.*\] \".* \/xmlrpc.php /'
